@@ -1,3 +1,4 @@
+#	$NetBSD: README,v 1.2 1995/02/27 13:24:00 cgd Exp $
 #	@(#)README	8.1 (Berkeley) 6/4/93
 
 These are the current memory pool routines.
